--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ display: flex;
 
 aside{
 flex: 1;
-background: url(
+background: url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);
 }
 
 article{
