--- a/style.css
+++ b/style.css
@@ -20,5 +20,8 @@ flex: 3;
 }
 
 
-
-
+aside{
+background-image: url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);
+background-repeat: no-repeat;
+background-size: 100% auto;
+}
