--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ background-image: url(https://user-images.githubusercontent.com/100692708/157532
 
 main{
 display: flex;
+background-image: url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);  
 }
 
 aside{
