--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ body{
 display: flex;
 flex-direction: column; 
 background-image: url(https://user-images.githubusercontent.com/100692708/157532613-cd74193f-7818-43b5-81a9-72755ca6072b.jpg);
+background-repeat: no-repeat;  
 background-size: 100% auto;
 }
 
 main{
 display: flex;
 background-image: url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);  
+background-repeat: no-repeat;
 background-size: 100% auto;  
 }
 
