--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ display: flex;
 background-image: url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);  
 background-repeat: no-repeat;
 background-size: 100% auto;  
+flex: 5;  
 }
 
 aside{
@@ -24,6 +25,10 @@ flex: 1;
 article{
 flex: 3;
 }
+
+aside{
+flex: 1;
+}  
 
 asidemenu{
 margin: 0;
