--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ display: flex;
 background-image: url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);  
 background-repeat: no-repeat;
 background-size: 100% auto; 
-flex: 1;  
+flex: 4;  
 }
 
 aside{
@@ -26,6 +26,9 @@ article{
 flex: 3;
 }
 
+header{
+flex: 1;
+}  
 
 asidemenu{
 margin: 0;
