--- a/style.css
+++ b/style.css
@@ -10,12 +10,18 @@ background-repeat: no-repeat;
 background-size: 100% auto;
 }
 
+header{
+width: 100%;
+height: 400px;
+} 
+
+
 main{
 display: flex;
 background-image: url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);  
 background-repeat: no-repeat;
 background-size: 100% auto; 
-flex: 4;  
+flex: 1;  
 }
 
 aside{
@@ -25,10 +31,7 @@ flex: 1;
 article{
 flex: 3;
 }
-
-header{
-flex: 1;
-}  
+ 
 
 asidemenu{
 margin: 0;
